<resources>
    <string name="app_name">ITMOdbep</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Database</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_data">Add new data</string>
    <string name="add_education_program">Add Education Program</string>
    <string name="add_student">Add Student</string>
    <string name="add_lecture">Add Lecturer</string>
    <string name="add_science_project">Add Science Project</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="education_program">Education Program</string>
    <string name="eps_name_program">Name Program</string>
    <string name="eps_number_bp">Number of budget places</string>
    <string name="eps_number_cp">Number of contract places</string>
    <string name="eps_program_manager">Program manager</string>
    <string name="eps_contact_person">Contact person</string>
    <string name="eps_entrance_tests">Entrance tests</string>

    <string name="student">Student</string>
    <string name="student_name">Name Student</string>
    <string name="student_birth_day">Birth Day</string>
    
    <string name="lecturer">Lecturer</string>
    <string name="lecturer_name">Name Lecturer</string>
    <string name="lecturer_position">Position Lecturer</string>

    <string name="science_project">Science Project</string>
    <string name="science_project_name">Name Project</string>
    <string name="science_project_description">Description</string>

    <string name="id_science_project">ID Science Project</string>
    <string name="id_education_group">ID Education Group</string>

    <!-- test data-->
    <string name="test_data_name_program">Квантовая электроника</string>
    <string name="test_data_id_educ_group">187687</string>
    <string name="test_data_number_bp">23</string>
    <string name="test_data_number_cp">17</string>
    <string name="test_data_program_manager">Елена Михайлова</string>
    <string name="test_data_contacts">+79854562165</string>
    <string name="test_data_entrance">русский язык математика информатика</string>
</resources>