<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_ep"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_education_program" />
        <item
            android:id="@+id/nav_add_student"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_student" />
        <item
            android:id="@+id/nav_add_lecturer"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_lecture" />
        <item
            android:id="@+id/nav_add_science_project"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_science_project" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
